tests/errors/unknown-trait-impl.ari
impl MissingTrait[i64] for i64 {
}

fn main() -> i64 {
  return 0;
}
